@@ -1,3 +1,9 @@
+2008-05-30  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
+
+	* libavogadro/src/engines/surfaceengine.cpp: Instead of iterating over
+	all atoms for each grid point, iterate over all atoms once and only
+	update grid points around the atom. This is 100-200x times faster...
+
 2008-06-04  Marcus D. Hanwell  <marcus@cryos.org>
 
 	* avogadro/src/addenginedialog.cpp: Fixes bug 1984080 - the added
